# PitchFold

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  webui.local.cmake.example
.github/workflows/: ci.yml
Assets/: Info-Standalone.plist  generate_icon.py
Source/: PluginProcessor.cpp  PluginProcessor.h  StandaloneApp.cpp
Source/PCS/: PCSEngine.h  ScaleData.h
Source/Pads/: ChordPadBank.h
Source/Quantizer/: DelayBuffer.h  TimeQuantizer.h  VoiceProcessor.h
Source/UI/: ChromaticWheel.h  IconFactory.h  PCSPreview.h  ScaleLattice.h
Source/WebUI/: PitchFoldEditor.cpp  PitchFoldEditor.h  index.html  juce-bridge.js  main.jsx  package-lock.json  package.json  react-globals.js
Source/WebUI/design/: chord-pads.jsx  pcs-explorer.jsx  quantizer-panel.jsx  scale-editor.jsx  time-panel.jsx  tokens.jsx  ui-primitives.jsx  voice-panel.jsx
build-macos/: CMakeCache.txt  Makefile  cmake_install.cmake
build-macos/JUCE/: JUCEExportConfig.cmake  Makefile  cmake_install.cmake
build-macos/JUCE/modules/: Makefile  cmake_install.cmake
build-macos/JUCE/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
build-macos/JUCE/tools/modules/: Makefile  cmake_install.cmake
build-macos/PitchFold_artefacts/JuceLibraryCode/: Info.txt
build-macos/PitchFold_artefacts/JuceLibraryCode/PitchFold_AU/: Info.plist
build-macos/PitchFold_artefacts/JuceLibraryCode/PitchFold_Standalone/: Info.plist
build-macos/PitchFold_artefacts/JuceLibraryCode/PitchFold_VST3/: Info.plist
build-macos/PitchFold_artefacts/JuceLibraryCode/Release/: Defs.txt
build-macos/PitchFold_artefacts/JuceLibraryCode/vst3_helper/: CMakeCache.txt  Makefile  cmake_install.cmake  shared_defs_Release.txt  shared_incs_Release.txt  vst3_helper
build-macos/PitchFold_artefacts/Release/AU/PitchFold.component/Contents/: Info.plist
build-macos/PitchFold_artefacts/Release/AU/PitchFold.component/Contents/_CodeSignature/: CodeResources
build-macos/PitchFold_artefacts/Release/Standalone/PitchFold.app/Contents/: Info.plist
build-macos/PitchFold_artefacts/Release/VST3/PitchFold.vst3/Contents/: Info.plist
build-macos/PitchFold_artefacts/Release/VST3/PitchFold.vst3/Contents/Resources/: AppIcon.icns  moduleinfo.json
build-macos/PitchFold_artefacts/Release/VST3/PitchFold.vst3/Contents/_CodeSignature/: CodeResources
build-macos/juce_binarydata_PitchFoldFonts/JuceLibraryCode/: BinaryData.h  BinaryData1.cpp  BinaryData2.cpp  BinaryData3.cpp  BinaryData4.cpp  input_file_list
build-macos/juce_binarydata_PitchFoldWebUI/JuceLibraryCode/: BinaryData1.cpp  BinaryData2.cpp  BinaryDataWebUI.h  input_file_list
